Keyboard focus automatically moves from the filename entry to the file list widget when typing a letter
Running Debian Testing "bookworm" with KDE/Plasma session, perform a dist-upgrade, the open chromium or chrome browser. Right click on an image and choose "save image as...". => you cannot change filename, search box appears, you have to click again in the filename field, etc... See small video I made here.
- It does not happen before dist-upgrade
- It does not happen with Gnome session
- It does not happen with Firefox.
Bug was initially created in kde (id 451668), they say it is GTK toolkit issue. Thank you.