main: Quick hotfix to workaround gtk #4880

- For Save As dialog, stop focus from being stolen from the filename
  entry and over to the search box. Hopefully this bug will be fixed in
  GTK soon and this workaround can be removed.
- See: https://gitlab.gnome.org/GNOME/gtk/-/issues/4880